@@ -7,6 +7,7 @@ my $perl_ver = 5.010001;
 my $name     = 'Web-ComposableRequest'; $name =~ s{ - }{::}gmx;
 my $prereqs  = {
   'build_requires' => {
+    'IO::String' => '1.08',
     'Module::Build' => '0.4004',
     'Test::Requires' => '0.06',
     'Unexpected' => 'v0.38.0',
@@ -21,8 +22,10 @@ my $prereqs  = {
     'Exporter::Tiny' => '0.042',
     'HTTP::Body' => '1.22',
     'HTTP::Message' => '6.06',
+    'JSON::MaybeXS' => '1.003005',
     'Moo' => '2.000001',
     'Subclass::Of' => '0.003',
+    'Try::Tiny' => '0.22',
     'URI' => '1.67',
     'Unexpected' => 'v0.38.0',
     'namespace::autoclean' => '0.26',
