@@ -6,6 +6,8 @@ lib/Web/ComposableRequest/Base.pm
 lib/Web/ComposableRequest/Config.pm
 lib/Web/ComposableRequest/Constants.pm
 lib/Web/ComposableRequest/Exception.pm
+lib/Web/ComposableRequest/Role/Cookie.pm
+lib/Web/ComposableRequest/Role/JSON.pm
 lib/Web/ComposableRequest/Role/L10N.pm
 lib/Web/ComposableRequest/Role/Session.pm
 lib/Web/ComposableRequest/Role/Static.pm
