@@ -4,12 +4,15 @@ name = Web-ComposableRequest
 perl                 = 5.010001
 namespace::autoclean = 0.26
 strictures           = 2.000000
+CGI::Simple          = 1.115
 Class::Inspector     = 1.28
 Exporter::Tiny       = 0.042
 HTTP::Body           = 1.22
 HTTP::Message        = 6.06
+JSON::MaybeXS        = 1.003005
 Moo                  = 2.000001
 Subclass::Of         = 0.003
+Try::Tiny            = 0.22
 URI                  = 1.67
 Unexpected           = v0.38.0
 
@@ -19,9 +22,10 @@ Module::Build     = 0.4004
 
 [Prereqs / BuildRequires]
 version           = 0.88
-Unexpected        = v0.38.0
+IO::String        = 1.08
 Module::Build     = 0.4004
 Test::Requires    = 0.06
+Unexpected        = v0.38.0
 
 [Meta::Dynamic::Config]
 
